package no.ntnu.idi.apollo69framework.network_messages;

public enum PlayerInputType {
    MOVE,
    ROTATE,
    SHOOT,
    BOOST
}
