@startuml

title __FRAMEWORK's Class Diagram__\n

  namespace no.ntnu.idi.apollo69framework {
    class no.ntnu.idi.apollo69framework.Apollo69Framework {
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    class no.ntnu.idi.apollo69framework.GameObjectDimensions {
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    class no.ntnu.idi.apollo69framework.HelperMethods {
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.DeviceInfo {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerDead {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerInQueue {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerInput {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      enum PlayerInputType {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerMatchmade {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerSpawn {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.ServerMessage {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.UpdateMessage {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.AsteroidDto {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.DimensionDto {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.ExplosionDto {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        enum GemType {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PickupDto {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PlayerDto {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PowerupDto {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        enum PowerupType {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.RotationDto {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      namespace data_transfer_objects {
        class no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.ShotDto {
        }
      }
    }
  }
  

  no.ntnu.idi.apollo69framework.network_messages.PlayerInput o-- no.ntnu.idi.apollo69framework.network_messages.PlayerInputType : type
  no.ntnu.idi.apollo69framework.network_messages.PlayerSpawn o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto : positionDto
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.AsteroidDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto : positionDto
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.ExplosionDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.DimensionDto : dimensionDto
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.ExplosionDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto : positionDto
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PickupDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.GemType : gemType
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PickupDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto : positionDto
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PlayerDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto : positionDto
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PlayerDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.RotationDto : rotationDto
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PowerupDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto : positionDto
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PowerupDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PowerupType : powerupType
  no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.ShotDto o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto : positionDto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
